task_1/api1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1-deployment
  labels:
    app: api1
spec:
  selector:
    matchLabels:
      app: api1-pod
  template:
    metadata:
      labels:
        app: api1-pod
    spec:
      containers:
      - name: api1-container
        image: api1
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api1-service
spec:
  selector:
    app: api1-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
