task_1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/api1"
        backend:
          service:
            name: api1-service
            port:
              number: 80
      - pathType: Prefix
        path: "/api2"
        backend:
          service:
            name: api2-service
            port:
              number: 80
